# xocto

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  benchmarks.csv  circle.yml  makefile  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: collect_benchmarks.yml  latest-changes.yml  release-to-pypi.yml  run_benchmarks_main.yml
benchmarks/: benchmark_ranges.py
docs/: conf.py  development.md  doc_settings.py  index.rst  requirements.txt  storage.md
docs/xocto/: development.md  events.md  health.md  localtime.md  model_fields.md  numbers.md  pact_testing.md  ranges.md  settings.md  settlement_periods.md  storage.md  tracing.md  types.md
scripts/: collect_benchmarks.py  extract_benchmarks.py  push_with_retry.sh
tests/: factories.py  settings.py  test_choices.py  test_conf.py  test_health.py  test_intervaltree.py  test_localtime.py  test_numbers.py  test_pact.py  test_ranges.py  test_settlement_periods.py  test_tracing.py  test_urls.py
tests/benchmarks/: test_ranges.py
tests/events/: test_core.py  test_utils.py
tests/fields/postgres/: test_ltree.py  test_ranges.py
tests/models/: models.py
tests/storage/: conftest.py  test_files.py  test_storage.py
tests/storage/fixtures/siteworks/agent_reports/: Daily-report-Octopus Energy-2019-08-15.xls  Daily-report-Octopus Energy-2020-04-08.xlsx
tests/storage/helpers/: fixtures.py
uncollected/: 0ad8e285-26f3-40ae-92cf-789f0199729f.csv  0bae4c6c-da4f-4724-8014-43996e86d6fa.csv  132c903c-fbc8-4a46-8574-e9d64cc6521e.csv  19cb53a1-8d22-4f0b-8a74-f92491730d9b.csv  1c6be7b0-88ff-4620-91a0-863d23db8a9a.csv  2078cb24-ed8b-439a-af2f-dbe29a495980.csv  28706e0f-133a-4a9a-ad83-66dfc4d10bc7.csv  2be608b9-20a1-4a48-96be-d7cb0058dd22.csv  355c0f9f-b0b0-4dfd-8eec-3ec1e3295184.csv  48716d4d-39f6-4c2c-9ed8-a66d86f36cae.csv  4a709a1d-3ad5-48bd-90b6-1ecdd7884864.csv  4f127d41-a11f-479b-a68c-7d3e4ec192ba.csv  5026e3cc-248d-4a9c-a515-4e2981c4b401.csv  57bf151a-c22b-4bf2-ad1f-a6198ef9b157.csv  59ab4ee3-978a-48ec-ae4b-fff695d480a4.csv  5bb533aa-a9a9-4f34-abf1-1fe3568090d2.csv  6803be50-03bd-456c-b6e0-13f6f3bde0e3.csv  6a2c86aa-5ae0-45e5-acbb-48921705647a.csv  7281d5b2-f680-4216-af78-f1b89befee28.csv  77b91eaf-6104-4759-a821-a8eb1eeca103.csv  7dcc4345-df4b-4307-9921-37b016371334.csv  7efc1161-5e0f-40c6-a2ef-1af4651d9354.csv  922907f8-05d3-4cf5-be73-6fbb00eaf451.csv  93397e23-cf31-4cb9-89a1-1e264102bc72.csv  9834fed7-b74d-4411-8593-6f1506a8b2b6.csv  b5541035-6ee5-48b2-83d6-4c9357875b5d.csv  c43d1630-5648-470c-afc6-a5c11fd06f1f.csv  cfd147fc-d41a-430d-b8a7-b2814cc2adad.csv  cfdc49d8-e56d-4c9b-af51-b3f434a9a235.csv  d051e9b3-3a6a-446a-ba86-92ca2a4cd347.csv  db2ad0d5-b30f-425b-8d9d-f6634821021c.csv  df934b87-f2e9-456b-b3f3-e6ccc44edb12.csv  e9579dd0-12dd-482b-8a48-1e7ca74f0f8a.csv  ef921f1b-9e5f-49d3-8e77-90d00c8cc3e1.csv  efb87bfa-0700-4c66-b89c-d66bca89cd8b.csv  f543d534-d0e8-4ad9-a193-db7fe791cb56.csv  f996edbb-70f1-4998-a094-8a35c76d14a1.csv  fe54ed60-16c4-44ec-b028-9dd727c0ce9c.csv
xocto/: __init__.py  apps.py  choices.py  conf.py  exceptions.py  health.py  intervaltree.py  localtime.py  numbers.py  pact_testing.py  ranges.py  settlement_periods.py  tracing.py  types.py  urls.py
xocto/events/: __init__.py  core.py  utils.py
xocto/fields/postgres/: ltree.py  ranges.py
xocto/interfaces/: base_views.py
xocto/storage/: files.py  s3_select.py  storage.py
xocto/types/: django.py  generic.py
